Add new attributes to query
