# ferelight/openapi/openapi.yaml
@@ -321,6 +321,10 @@ components:
           description: The ASR text.
           title: asrtext
           type: string
+        mergetype:
+          description: Merge Type for the similaritytext
+          title: mergetype
+          type: string
         limit:
           description: The maximum number of results to return.
           title: limit
